syntax = "proto3";
package proto;

service AuthorizationService {
	rpc Login(LoginRequest) returns (LoginResponse) {}
	rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {}

message LogoutRequest {}

message LogoutResponse {}
